# qrcodefun

./: pyproject.toml
qrcodesfun/: generate_mecard_qr.py  generate_qr.py  generate_vcard_qr.py  generate_wifi_qr.py
