[tool.poetry]
name = "qrcodesfun"
version = "0.1.0"
description = ""
authors = ["15bubbles <15bubbles.15bubbles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qrcode = "^8.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
